Archive2/ea/484c30033e423d/output
main.cpp:150:73: error: expected primary-expression before ')' token
     auto set(bitfield<Bytes, Sections...> bf) -> decltype(bf.set<Index>())
                                                                         ^
main.cpp:156:73: error: expected primary-expression before ')' token
     auto get(bitfield<Bytes, Sections...> bf) -> decltype(bf.get<Index>())
                                                                         ^
